--- a/src/styles/_ReadingContent.scss
+++ b/src/styles/_ReadingContent.scss
@@ -1,21 +1,3 @@
-@mixin pseudoElemColumn() {
-  display: flex;
-  gap: 4px;
-  position: relative;
-
-  &::before {
-    content: "";
-    background: rgba(72, 91, 88, 0.15);
-    flex: 1;
-  }
-
-  &::after {
-    content: "";
-    background: rgba(72, 91, 88, 0.15);
-    flex: 1;
-  }
-}
-
 @keyframes animate-steps {
   to {
     background-position: 100%;
@@ -68,10 +50,11 @@
 }
 
 .line-scroll {
+  z-index: 100;
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translate(calc(-50% + 7px), 50%);
+  transform: translate(-50%, 50%);
     
   width: 2px;
   height: 160px;
@@ -95,21 +78,26 @@
   }
 }
 
-.content-wrapper {
+.contents-container {
+  height: 100%;
   position: relative;
+}
 
-  .content-structure {
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    inset: 0;
-    padding: 0 100px;
+.content-wrapper {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
   
+  .content-structure {
+    height: inherit;
+    width: inherit;
+    padding: 0 100px;
+    
     display: grid;
     gap: 4px;
     grid-template-columns: repeat(12, 1fr);
     color: var(--clr-light);
-  
+    
     .hidden {
       font-size: 16px;
       font-weight: 500;
@@ -137,8 +125,9 @@
   }
   
   .content-structure-background {
-    height: 100vh;
-    width: 100vw;
+    z-index: -10;
+    position: absolute;
+    inset: 0;
   
     background-color: #1B2120;
     padding: 0 100px;
